# streaming_statistics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
script/: stats
streaming_statistics/: cli.py
streaming_stats/: streaming_stats.py
tests/: test_streaming_stats.py
